syntax = "proto3";

package sys_ctrl;
option go_package = "pkg/pb";
option swift_prefix = "";

import "google/protobuf/empty.proto";

service SystemCtrl {
  rpc DomainList(google.protobuf.Empty) returns (DomainListResponse);
  rpc DomainEnroll(DomainEnrollRequest) returns (DomainEnrollResponse);
}

message Domain {
  string name = 1;
}

message DomainListResponse {
  repeated Domain domains = 1;
}

message DomainEnrollRequest {
  string name = 1;
  string authentik_url = 2;
  string token = 3;
}

message DomainEnrollResponse {
  // agent.ResponseHeader header = 1;
}
